--- a/src/sass/imports/_typography.scss
+++ b/src/sass/imports/_typography.scss
@@ -3,7 +3,7 @@
 html,
 body {
     font-size: $tiny;
-    font-family: $DMSans;
+    font-family: $DM+Sans;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
