_article-teaser.scss: changed

--- a/src/sass/imports/_article-teaser.scss
+++ b/src/sass/imports/_article-teaser.scss
@@ -16,6 +16,9 @@
     .onethird{
         width: 33.33%
     }
+    .twothird{
+        width: 66.67%
+    }
 
     .thumbnail {
         flex: 1 0 auto;
