--- a/src/sass/imports/_buttons.scss
+++ b/src/sass/imports/_buttons.scss
@@ -9,7 +9,7 @@ button,
     &:visited,
     &:focus,
     &:hover {
-        color: black;
+        color: rgb(112, 112, 112);
         text-decoration: none;
         outline: none;
         box-shadow: none;
