--- a/src/sass/imports/_header.scss
+++ b/src/sass/imports/_header.scss
@@ -45,7 +45,7 @@
             content: ' ';
             height: 2px;
             width: 100%;
-            background: $blue;
+            background: #2a2a2a;
             border: none;
             position: absolute;
             left: 0;
